<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".FetchLocationFragment">

	<androidx.cardview.widget.CardView
		android:id="@+id/cardHoldDetectedLocation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:clickable="true"
		android:focusable="true"
		app:cardBackgroundColor="@color/green_bg"
		app:cardCornerRadius="20dp"
		app:cardElevation="15dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="20dp"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/btnDetectMyLocation"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_gravity="center"
				android:contentDescription="@string/app_name"
				app:srcCompat="@drawable/img_detect_my_location" />

			<TextView
				android:id="@+id/tvDetectMyLocation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/detect_my_location"
				android:textColor="@color/green10"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/tvRecommended"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/recommended"
				android:textColor="@color/green10"/>

		</LinearLayout>

	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/cardHoldManualLocation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:clickable="true"
		app:cardBackgroundColor="@color/green_bg"
		app:cardCornerRadius="20dp"
		app:cardElevation="15dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.501"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/cardHoldDetectedLocation"
		android:focusable="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="20dp"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/btnEnterLocationManually"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_gravity="center"
				android:contentDescription="@string/app_name"
				app:srcCompat="@drawable/img_enter_location_manually"
				tools:ignore="DuplicateSpeakableTextCheck" />

			<TextView
				android:id="@+id/tvEnterLocationManually"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/enter_location_manually"
				android:textColor="@color/green10"
				android:textStyle="bold" />

			<EditText
				android:id="@+id/etEnterLocationManually"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:autofillHints="postalAddress"
				android:ems="10"
				android:textCursorDrawable="@drawable/custom_cursor"
				android:backgroundTint="@color/green10"
				android:gravity="center"
				android:hint="@string/enter_location"
				android:inputType="textPersonName"
				android:textColor="@color/green10"
				android:textColorHint="#33691E"
				android:textSize="16sp"
				tools:ignore="TouchTargetSizeCheck" />

		</LinearLayout>

	</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>