<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:background="?attr/selectableItemBackground"
		app:cardCornerRadius="10dp"
		app:cardElevation="5dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/green_bg">

			<TextView
				android:id="@+id/tvName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="15dp"
				android:layout_marginTop="15dp"
				android:text="@string/punjab_restaurant"
				android:textColor="@color/green10"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tvDistance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="16dp"
				android:text="@string/_3_415km"
				android:textColor="@color/greenText"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/tvType"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="15dp"
				android:layout_marginTop="3dp"
				android:layout_marginBottom="15dp"
				android:text="@string/indian_restaurant"
				android:textColor="#33691E"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tvName" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>